--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 </head>
 <body>
+    <a href="pages/Audio.html">Check This First!</a>
     <input type="password" id="passwordInput" placeholder="Enter password">
     <button onclick="checkPassword()">Submit</button>
     <p id="result"></p>
-
-    <audio src="Audio/AlphaPW1.mp3"></audio>
 
     <script>
         // This is a hashed version of the password "myPassword"
